--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,6 @@
             "email": "alaa4cat@gmail.com"
         }
     ],
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "require": {}
 }
