--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,9 @@
         }
     ],
     "extra": {
+        "branch-alias": {
+            "dev-master": "1.0-dev"
+        },
         "laravel": {
             "providers": [
                 "Alaaelsaid\\LaravelSmsHelper\\Providers\\SmsServiceProvider"
